# im-python

./: .gitignore  Makefile  README.md  pyproject.toml
installer/: ImPython.spec
scripts/: run_app.py
src/im_python/: __init__.py  app.py  cli.py  gui.py  resources.py
tests/: test_basic.py  test_cli_help.py  test_resources.py
