[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/im_python"]

[tool.hatch.build]
include = ["src/im_python"]

[project]
name = "im-python"
version = "0.1.0"
description = "Python template with imgui-bundle GUI demo, TOML config, and GitHub Actions CI."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "norad32" }
]
dependencies = [
  "typer>=0.12.3"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "pyinstaller",
  "build",
]

gui = [
  "imgui-bundle"
]

[project.scripts]
im-python = "im_python.cli:main"

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]
